// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component testing Badge normal 1`] = `
<DocumentFragment>
  <span
    class="sc-bczRLJ bVSIjV"
    color="#0B82F4"
    font-weight="normal"
  >
    text
  </span>
</DocumentFragment>
`;

exports[`Badge component testing Badge pill 1`] = `
<DocumentFragment>
  <span
    class="sc-gsnTZi fIAbQQ"
    color="#FFFFFF"
    font-weight="normal"
  >
    text
  </span>
</DocumentFragment>
`;
